# export-gmail

./: .envrc.sample  .gitignore  README.md  pyproject.toml
src/: download.py  export.py  parse.py
